[package]
name = "md-conv"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "Convert Markdown to PDF and HTML with front matter and custom CSS"
license = "MIT"
repository = "https://github.com/jsogarro/md-conv"
readme = "README.md"
documentation = "https://docs.rs/md-conv"
homepage = "https://github.com/jsogarro/md-conv"
keywords = ["markdown", "pdf", "html", "converter", "cli"]
categories = ["command-line-utilities", "text-processing"]
exclude = [
    "after_pooling_benchmark.txt",
    "after_all_perf_benchmark.txt",
    "baseline_benchmark.txt",
    "test.md",
    "test.pdf",
    "benches/",
    "tests/fixtures/",
    "SECURITY.md",
]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Markdown processing
gray_matter = { version = "0.2", default-features = false, features = ["yaml"] }
pulldown-cmark = { version = "0.12", default-features = false, features = ["simd", "html"] }

# Templating
handlebars = "6"

# PDF generation
chromiumoxide = { version = "0.7", default-features = false, features = ["tokio-runtime"] }
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = { version = "0.1", features = ["attributes"] }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Security
ammonia = "4"
home = "=0.5.9" # Pin to avoid edition2024 requirement in 0.5.12
lightningcss = { version = "1.0.0-alpha.68", features = ["visitor"] }
tempfile = "3"
notify = "6"
libc = "0.2" # For macOS fcntl(F_GETPATH) in TOCTOU-safe path resolution

slug = "0.1"
syntect = { version = "5", default-features = false, features = ["default-fancy", "html", "parsing", "regex-fancy"] }
indicatif = "0.17"
html-escape = "0.2"
once_cell = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "winnt"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tokio-test = "0.4"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[package.metadata.docs.rs]
all-features = true

[profile.dev]
incremental = true

[profile.dev.package."*"]
opt-level = 2
